--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,7 @@
 
 	<!-- SQLServer JDBC driver (JTDS) -->
 	<!-- http://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
-	<dependency>
-		<groupId>net.sourceforge.jtds</groupId>
-		<artifactId>jtds</artifactId>
-		<scope>runtime</scope>
-	</dependency>
+
 
 	<dependency>
 		<groupId>com.oracle</groupId>
@@ -150,38 +146,12 @@
 				<scope>runtime</scope>
 			</dependency>
 
-			<!-- Commons Email validator,... -->
-			<!-- http://mvnrepository.com/artifact/commons-validator/commons-validator -->
-			<dependency>
-				<groupId>commons-validator</groupId>
-				<artifactId>commons-validator</artifactId>
-				<version>1.6</version>
-			</dependency>
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<optional>true</optional>
+	</dependency>
 
-			<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
-			<dependency>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-				<version>2.6</version>
-			</dependency>
-
-			<!-- https://mvnrepository.com/artifact/org.threeten/threetenbp -->
-			<dependency>
-				<groupId>org.threeten</groupId>
-				<artifactId>threetenbp</artifactId>
-				<version>1.3.6</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-test</artifactId>
-				<scope>test</scope>
-			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-api</artifactId>
@@ -197,10 +167,7 @@
 				<groupId>javax.servlet</groupId>
 				<artifactId>jstl</artifactId>
 			</dependency>
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-			</dependency>
+
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
